--- a/public/index.html
+++ b/public/index.html
@@ -15,42 +15,74 @@
             -ms-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
         }
+        .error {
+            color: red;
+        }
+        .opacity {
+            opacity: 0;
+        }
     </style>
 </head>
 <body>
 
-    <form
-          method="post"
-          enctype="multipart/form-data"
-    >
+<form
+        action="/"
+        method="post"
+        enctype="multipart/form-data"
+>
+    <div>
         <div>
-
-            <div>
-                choose report type:
-            </div>
-
-            <label>
-                <input type="radio" name="type" value="total">
-                List of webpages with total page views ordered from most to least page views
-            </label>
-
-            <br />
-
-            <label>
-                <input type="radio" name="type" value="unique">
-                List of webpages with total unique page views also ordered from most to least
-            </label>
+            choose report type:
         </div>
+
+        <label>
+            <input type="radio" name="type" value="total" checked>
+            List of webpages with total page views ordered from most to least page views
+        </label>
 
         <br />
 
         <label>
-            log file:
-            <input type="file" name="file">
+            <input type="radio" name="type" value="unique">
+            List of webpages with total unique page views also ordered from most to least
+        </label>
+    </div>
+
+    <div>
+        <div>
+            choose response type:
+        </div>
+
+        <label>
+            <input type="radio" name="response" value="screen" checked>
+            Show result on the screen
         </label>
 
+        <br />
 
-        <input type="submit" value="submit">
-    </form>
+        <label>
+            <input type="radio" name="response" value="download">
+            Download result as a file
+        </label>
+    </div>
+
+    <br />
+
+    <label>
+        log file:
+        <input type="file" name="file" required>
+    </label>
+
+
+    <input type="submit" value="submit">
+
+    <div class="error opacity">Server processing error</div>
+    <script>
+        if (location.href.indexOf('processingerror') > -1) {
+
+          document.querySelector('.error').classList.remove('opacity')
+        }
+    </script>
+</form>
 </body>
 </html>
